# dagster-ecs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRENT_ARCHITECTURE.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_PROCESS.md  Makefile  NETWORK_ARCHITECTURE.md  README.md  dagster-local.yaml  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
.claude/: settings.local.json
.dagster_home/.telemetry/: id.yaml
.dagster_home/history/: runs.db
.dagster_home/schedules/: schedules.db
.github/workflows/: deploy-dags-to-efs.yml  deploy.yml  example-team-deploy.yml
dags/: __init__.py
dags/main/: __init__.py  assets.py  jobs.py  resources.py  template_dag.py
dags/team-data-science/: ml_training.py
dags/team-finance/: daily_reports.py
dags/team-marketing/: email_campaign.py
dagster/: __init__.py  dagster-local.yaml  workspace-local.yaml  workspace-production.yaml  workspace_loader.py  workspace_loader_local.py
dagster_config/: auto_discover.py  auto_discover_local.py  dagster-local.yaml  dagster-production.yaml  workspace-local.yaml  workspace-production.yaml  workspace.yaml  workspace_loader.py  workspace_loader_local.py
docker/: Dockerfile  efs-workspace-entrypoint.sh  entrypoint.sh  generate-htpasswd.sh  multi-repo-entrypoint.sh  nginx.conf  supervisord.conf  sync-from-s3.sh  workspace-production.yaml
docs/: architecture.md  deployment.md  development.md  efs-deployment-guide.md  external-repository-guide.md
infrastructure/: backend.hcl  ecr.tf  ecs_fargate.tf  efs.tf  github_actions.tf  iam.tf  load_balancer.tf  main.tf  outputs.tf  rds.tf  s3.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: ci-simulation.sh  create-dag.sh  deploy-dags.sh  deploy-project.sh  deploy-repo-dags.sh  deploy-workspace.sh  ecs-recreate.py  ecs-shutdown.py  ecs-status.py  manage-auth.sh  push.sh  security-check.sh  test-dynamic-loading.py  test.sh  workspace-status.sh
templates/: dag.py  external-repo-github-action.yml
(+7 files in other folders)
